Criei o view model para separar as funções com regra de negocio do código da interface, adicionei os códigos da interface com binding, criei os adapter para fixar os dados, criei a interface que forma a lista de bandas no recycleview, e também criei o repositorio, o banco de dados com as funções de adição de bandas já funciona, falta fazer o mesmo com musicos e também criar outras operaçãoes no banco como editar e excluir.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.example.bandasdb">
 
     <application
+        android:name=".database.bandapplication.MetalApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
