--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,14 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+
+
+    //room
     id 'org.jetbrains.kotlin.kapt'
 }
 
 android {
+    namespace 'com.example.bandasdb'
     compileSdk 32
 
     defaultConfig {
@@ -36,6 +40,14 @@ android {
 }
 
 dependencies {
+    //PARA USAR BY VIEWMODELS()
+    implementation "androidx.activity:activity-ktx:1.5.1"
+
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
+    implementation "androidx.fragment:fragment-ktx:1.5.3"
+
 
     // Biblioteca Room para banco de dados:
     def room_version = "2.4.3"
@@ -48,7 +60,7 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
     implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
